@@ -46,8 +46,8 @@ INSERT INTO `tconfig` (`token`, `value`) VALUES
 ('days_compact','15'),
 ('graph_res','5'),
 ('step_compact','1'),
-('db_scheme_version','3.1'),
-('db_scheme_build','PD100608'),
+('db_scheme_version','3.2dev'),
+('db_scheme_build','PD100922'),
 ('show_unknown','0'),
 ('show_lastalerts','1'),
 ('style','pandora'),
